--- a/templates/accounts/fitbit_userManage.html
+++ b/templates/accounts/fitbit_userManage.html
@@ -32,7 +32,7 @@
                     <th scope="col" data-column="pregnancy_start_date">임신 시작일</th>
                     <th scope="col" data-column="join_date">연구 시작일</th>
                     <th scope="col" data-column="end_date">연구 종료일</th>
-                    <th scope="col" data-column="showed_sync_status">동기화 상태</th>
+                    <th scope="col" data-column="showed_sync_status">마지막 동기화</th>
                     <th scope="col" data-column="note">노트</th>
                 </tr>
                 <!-- <tr>
@@ -64,26 +64,30 @@
                         <!-- <td>{{ user.fitbit.last_synced|date:'Y-m-d H:i' }}</td> -->
                         <td><select class="form-control research-status" data-user-id="{{ user.pk }}">
                             <option value="preparing"
-                                    {% if user.huami.research_status == 'preparing' %}selected{% endif %}>준비
+                                    {% if user.fitbit_fitbitaccount.research_status == 'preparing' %}selected{% endif %}>준비
                             </option>
-                            <option value="ongoing" {% if user.huami.research_status == 'ongoing' %}selected{% endif %}>
+                            <option value="ongoing" {% if user.fitbit_fitbitaccount.research_status == 'ongoing' %}selected{% endif %}>
                                 진행 중
                             </option>
                             <option value="completed"
-                                    {% if user.huami.research_status == 'completed' %}selected{% endif %}>완료
+                                    {% if user.fitbit_fitbitaccount.research_status == 'completed' %}selected{% endif %}>완료
                             </option>
                         </select></td>
 
                         <td><select class="form-control research-year" data-user-id="{{ user.pk }}" style="width: 75px;">
                             <option value="none"
-                                    {% if user.huami.research_year == 'none' %}selected{% endif %}> 미확인
+                                    {% if user.fitbit_fitbitaccount.research_year == 'none' %}selected{% endif %}> 미확인
                             </option>
-                            <option value="2023" {% if user.huami.research_year == '2023' %}selected{% endif %}>
+                            <option value="2023" {% if user.itbit_fitbitaccount.research_year == '2023' %}selected{% endif %}>
                                 2023년
                             </option>
                             <option value="2024"
-                                    {% if user.huami.research_year == '2024' %}selected{% endif %}>
+                                    {% if user.fitbit_fitbitaccount.research_year == '2024' %}selected{% endif %}>
                                 2024년
+                            </option>
+                            <option value="2025"
+                                    {% if user.fitbit_fitbitaccount.research_year == '2025' %}selected{% endif %}>
+                                2025년
                             </option>
                         </select></td>
                         <td>
@@ -101,11 +105,7 @@
                                    data-user-id="{{ user.pk }}"
                                    value="{{ user.fitbit_fitbitaccount.end_date|date:'Y-m-d' }}">
                         </td>
-                        <td>
-                            <input type="date" class="form-control last_synced"
-                                   data-user-id="{{ user.pk }}"
-                                   value="{{ user.fitbit_fitbitaccount.last_synced|date:'Y-m-d' }}">
-                        </td>
+                        <td>{{ user.fitbit.last_synced|date:'Y-m-d' }}</td>
 
                         <td>{{ user.fitbit_fitbitaccount.note }}</td>
                     </tr>
