--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -79,6 +79,10 @@
                             <option value="2024"
                                     {% if user.huami.research_year == '2024' %}selected{% endif %}>2024년
                             </option>
+                            <option value="2025"
+                                    {% if user.huami.research_year == '2025' %}selected{% endif %}>
+                                2025년
+                            </option>
                         </select></td>
                         <td>
                             <input type="date" class="form-control pregnancy_start_date"
