--- a/templates/accounts/fitbit_userManage.html
+++ b/templates/accounts/fitbit_userManage.html
@@ -64,50 +64,50 @@
                         <!-- <td>{{ user.fitbit.last_synced|date:'Y-m-d H:i' }}</td> -->
                         <td><select class="form-control research-status" data-user-id="{{ user.pk }}">
                             <option value="preparing"
-                                    {% if user.fitbit_fitbitaccount.research_status == 'preparing' %}selected{% endif %}>준비
+                                    {% if user.fitbit.research_status == 'preparing' %}selected{% endif %}>준비
                             </option>
-                            <option value="ongoing" {% if user.fitbit_fitbitaccount.research_status == 'ongoing' %}selected{% endif %}>
+                            <option value="ongoing" {% if user.fitbit.research_status == 'ongoing' %}selected{% endif %}>
                                 진행 중
                             </option>
                             <option value="completed"
-                                    {% if user.fitbit_fitbitaccount.research_status == 'completed' %}selected{% endif %}>완료
+                                    {% if user.fitbit.research_status == 'completed' %}selected{% endif %}>완료
                             </option>
                         </select></td>
 
                         <td><select class="form-control research-year" data-user-id="{{ user.pk }}" style="width: 75px;">
                             <option value="none"
-                                    {% if user.fitbit_fitbitaccount.research_year == 'none' %}selected{% endif %}> 미확인
+                                    {% if user.fitbit.research_year == 'none' %}selected{% endif %}> 미확인
                             </option>
-                            <option value="2023" {% if user.itbit_fitbitaccount.research_year == '2023' %}selected{% endif %}>
+                            <option value="2023" {% if user.fitbit.research_year == '2023' %}selected{% endif %}>
                                 2023년
                             </option>
                             <option value="2024"
-                                    {% if user.fitbit_fitbitaccount.research_year == '2024' %}selected{% endif %}>
+                                    {% if user.fitbit.research_year == '2024' %}selected{% endif %}>
                                 2024년
                             </option>
                             <option value="2025"
-                                    {% if user.fitbit_fitbitaccount.research_year == '2025' %}selected{% endif %}>
+                                    {% if user.fitbit.research_year == '2025' %}selected{% endif %}>
                                 2025년
                             </option>
                         </select></td>
                         <td>
                             <input type="date" class="form-control pregnancy_start_date"
                                    data-user-id="{{ user.pk }}"
-                                   value="{{ user.fitbit_fitbitaccount.pregnancy_start_date|date:'Y-m-d' }}">
+                                   value="{{ user.fitbit.pregnancy_start_date|date:'Y-m-d' }}">
                         </td>
                         <td>
                             <input type="date" class="form-control start-date"
                                    data-user-id="{{ user.pk }}"
-                                   value="{{ user.fitbit_fitbitaccount.join_date|date:'Y-m-d' }}">
+                                   value="{{ user.fitbit.join_date|date:'Y-m-d' }}">
                         </td>
                         <td>
                             <input type="date" class="form-control end-date"
                                    data-user-id="{{ user.pk }}"
-                                   value="{{ user.fitbit_fitbitaccount.end_date|date:'Y-m-d' }}">
+                                   value="{{ user.fitbit.end_date|date:'Y-m-d' }}">
                         </td>
                         <td>{{ user.fitbit.last_synced|date:'Y-m-d' }}</td>
 
-                        <td>{{ user.fitbit_fitbitaccount.note }}</td>
+                        <td>{{ user.fitbit.note }}</td>
                     </tr>
 
                 {% endfor %}
